Adding updated locales as strings skipped.

--- a/ubiquity/chrome/locale/cs-CZ/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/cs-CZ/aboutubiquity.properties
@@ -9,7 +9,10 @@ ubiquity.prefkeys.notifybadmodifier=Musíte použít modifikátor, jako SHIFT, C
 ubiquity.prefkeys.clickhere=Klikněte zde pro změnu
 ubiquity.prefkeys.confirmchange=Vaše klávesa byla změněna na %S.
 ubiquity.prefkeys.pressyourcombo=Stiskněte vaši kombinaci...
+ubiquity.cmdlist.unsubscribefeed=ododebírat
+ubiquity.cmdlist.feedupdated=Pro tento zdroj je dostupná aktualizace.
 ubiquity.cmdlist.viewsource=zobrazit zdroj
+ubiquity.cmdlist.viewfeedsource=ododebírat
 ubiquity.cmdlist.localetemplate=získat lokalizační šablonu
 ubiquity.cmdlist.synonyms=také nazýváno %S
 ubiquity.cmdlist.createdby=od %S
@@ -17,7 +20,12 @@ ubiquity.cmdlist.license=licencováno pod %S
 ubiquity.cmdlist.contributions=za přispění %S
 ubiquity.cmdlist.homepage=domovská stránka
 ubiquity.cmdlist.viewmoreinfo=zobrazit více informací na %S
+ubiquity.cmdlist.oldparsertitle=Pro tento zdroj je dostupná aktualizace.
+ubiquity.cmdlist.resubscribe=znovuodebírat
+ubiquity.cmdlist.purge=vyčistit
+ubiquity.subscription.successheader=Odběř úspěšný
 ubiquity.settings.restartfirefox=Toto se projeví po restartu Firefoxu.
+ubiquity.settings.opennewwindows=Tato změna se projeví po otevření nového okna.
 ubiquity.settings.skinsaved=Váš vzhled byl uložen!
 ubiquity.settings.skinerror=Chyba ukládání vašeho vzhledu.
 ubiquity.settings.skinauthor=vytvořil %S
