--- a/ubiquity/chrome/locale/cs-CZ/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/cs-CZ/aboutubiquitytutorial.properties
@@ -2,8 +2,16 @@ tutorial.welcome=Vítejte v tutoriálu Ubiquity.
 tutorial.fromthestart=Klikněte sem pro začnutí od začátku
 tutorial.fromthemiddle=Začít od prostředka:
 tutorial.howtostart=Jak spustit Ubiquity
+tutorial.previews=Náhledy (příkaz Weather)
+tutorial.abbreviations=Zkratky (Calculate)
+tutorial.suggestions=Seznam návrhů (Google)
+tutorial.selecting=Vybírání, Spouštění (Translate, Map)
+tutorial.morecommands=Jak získat nápovědu a naučit se více příkazů
+tutorial.stage01h1=Tutoriál Ubiquity, část 1 ze 6: Jak spustit Ubiquity
 tutorial.stage01p1=Vítejte v tutoriálu Ubiquity.
+tutorial.stage01p3=Držte klávesu %S a stiskněte klávesu %S.
 tutorial.stage02p1=Toto je <strong>vstupní box</strong> Ubiquity. Můžete zde psát příkazy.
+tutorial.stage03h1=Tutoriál Ubiquity, část 2 ze 6: Příkazy počasí a náhledy
 tutorial.stage04p1=Nyní vepište slovo weather <strong>weather</strong>...
 tutorial.stage13p1=Řekněme, že chcete vyhledat cheese Googlem.
 tutorial.stage13p2=Vepište písmeno 'g' a mezeru a slovo 'cheese'.
