--- a/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquity.properties
@@ -26,6 +26,7 @@ ubiquity.nav.hackubiquity=Hack Ubiquity
 
 #
 
+ubiquity.showhidehelp.show=Mostra aiuto
 ubiquity.showhidehelp.hide=Nascondi aiuto
 #
 
