--- a/ubiquity/chrome/locale/it-IT/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquitytutorial.properties
@@ -2,7 +2,7 @@
 
 tutorial.welcome=Benvenuto al tutorial di Ubiquity.
 tutorial.fromthestart=Fare clic qui per cominciare da zero
-tutorial.fromthemiddle=Salta le nozioni base:
+tutorial.fromthemiddle=Salta l'introduzione:
 tutorial.howtostart=Come avviare Ubiquity
 tutorial.previews=Anteprima (comando Weather)
 tutorial.suggestions=I suggerimenti visualizzati (Calcola, Google)
@@ -28,14 +28,22 @@ tutorial.stage03p2=(Come prima, <strong>Tenendo premuto %S premere il tasto %S</
 tutorial.stage04p1=A questo punto scrivere <strong>weather/strong>...
 #
 
+tutorial.stage05p1=Già prima di aver concluso di scrivere, verrà mostrata un'<strong>anteprima del risultato &#8212; in questo caso un rapporto sulla situazione metereologica.
+tutorial.stage05p2=Se non viene specificata nessuna località, il comando <em>weather</em> cercherà di individuare la località in cui ci si trova.
+tutorial.stage05p3=Ora proviamo a indicare una località, <strong>digitare uno spazio seguito da near chicago</strong>. (In questo modo l'input completo è 'weather near chicago').
 #
 
+tutorial.stage06p1=Visto come funziona? Sentiti libero di cancellare chicago e provare a inserire il nome di un'altra località.
+tutorial.stage06p2=Quandosi è finito di leggere la situazione meteo premere <strong>ESC</strong>.
 #
 
+tutorial.stage07p1=Invochiamo nuovamente Ubiquity e proviamo a imparare qualche altro comando.
 #
 
+tutorial.stage08p1=Stavolta si <strong>premere la sola lettera 'c'</strong> (in minuscolo) e si faccia attenzione a cosa accade.
 #
 
+tutorial.stage09p1=Fra i <strong>suggerimenti</strong> mostrati da Ubiquity verranno indicati solo comandi che iniziano con la lettera 'c'.
 #
 
 #
@@ -70,9 +78,13 @@ tutorial.stage13p3=(Come, 'g formaggio').
 
 #
 
+tutorial.stage23p4=Invocare Ubiquity...
 #
 
+tutorial.stage24p2=digitare 'aiuto tab':
 #
 
+tutorial.stage25p1=Nei suggerimenti mostrati da Ubiquity si vedranno tutti quei comandi che contengono la parola 'tab'.
 #
 
+tutorial.stage26p4=Arrivederci!
