--- a/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
+++ b/ubiquity/chrome/locale/pt-BR/aboutubiquitytutorial.properties
@@ -2,91 +2,92 @@
 
 tutorial.welcome=Bem-vindo ao Tutorial do Ubiquity.
 tutorial.fromthestart=Clique aqui para começar do início
-tutorial.fromthemiddle=Conteúdo:
+tutorial.fromthemiddle=Pular para seção:
 tutorial.howtostart=Como iniciar o Ubiquity
-tutorial.previews=Previews (Weather command)
-tutorial.suggestions=The Suggestion List (Calculate, Google)
-tutorial.selecting=Selecting, Executing (Translate, Map)
-tutorial.morecommands=How to get help and learn more commands
+tutorial.previews=Previsão (comando Tempo)
+tutorial.abbreviations=Abreviações (Calcular)
+tutorial.suggestions=Lista de sugestões (Calcular, Google)
+tutorial.selecting=Selecionando, Executando (Traduzir, Mapa)
+tutorial.morecommands=Como obter ajuda e aprender novos comandos
 ##### Stage 01 (part 1 of 6) #####
 
-tutorial.stage01h1=Ubiquity Tutorial, part 1 of 6: How to start Ubiquity
-tutorial.stage01p1=Welcome to the Ubiquity tutorial.
-tutorial.stage01p2=Let's get started.  To summon Ubiquity, do this now:
-tutorial.stage01p3=Hold down the
+tutorial.stage01h1=Tutorial Ubiquity, parte 1 de 6: Como iniciar o Ubiquity
+tutorial.stage01p1=Bem-vindo ao tutorial do Ubiquity.
+tutorial.stage01p2=Vamos começar. Para iniciar o Ubiquity, siga os seguinte passos agora:
+tutorial.stage01p3=Segure a tecla %S e então pressione a tecla %S.
 ##### Stage 02
 
-tutorial.stage02p1=This is the Ubiquity <strong>input box</strong>.  You can type commands here.
-tutorial.stage02p2=If you want to get out of Ubiquity without giving a command, <strong>tap the Escape key</strong>.  Try that now.
+tutorial.stage02p1=Este é o <strong>campo de digitação</strong> do Ubiquity. Você pode digitar comandos aqui.
+tutorial.stage02p2=Caso você queira sair do Ubiquity sem digitar nenhum comando, <strong>pressione a tecla de escape (Esc)</strong>. Tente agora.
 ##### Stage 03 (part 2 of 6) #####
 
-tutorial.stage03h1=Ubiquity Tutorial, part 2 of 6: Weather command and Previews
-tutorial.stage03p1=OK, so now let's learn a command. Summon Ubiquity again...
-tutorial.stage03p2=(Remember, <strong>hold down the
+tutorial.stage03h1=Tutorial do Ubiquity, parte 2 de 6: comando Tempo e Previsões
+tutorial.stage03p1=Ok, então vamos aprender um comando. Abra o Ubiquity novamente…
+tutorial.stage03p2=(Lembre-se, <strong>segure a tecla %S e então pressione a tecla %S</strong>)
 ##### Stage 04
 
-tutorial.stage04p1=Now type the word <strong>weather</strong>...
+tutorial.stage04p1=Agora digite a palavra <strong>tempo</strong>…
 ##### Stage 05
 
-tutorial.stage05p1=Even before you're done typing, the <strong>preview area</strong> shows a preview of the results of your command — in this case, a weather report.
-tutorial.stage05p2=If you don't enter a location, the <em>weather</em> command takes a guess as to where you are.
-tutorial.stage05p3=Now let's give it a location: <strong>type a space, and then type 'near chicago'</strong>. (So your whole input will say: 'weather near chicago'.)
+tutorial.stage05p1=Mesmo antes de você terminar de digitar, a <strong>área de visualização</strong> exibirá uma lista com os resultados do seu comando — neste caso, um boletim do tempo.
+tutorial.stage05p2=Se você não digitar um local, o comando <em>tempo</em> tentará adivinhar onde você está.
+tutorial.stage05p3=Agora vamos informar um local: <strong>digite espaço e então digite 'em aracaju'</strong>. (Assim, seu comando será 'tempo em aracaju'.)
 ##### Stage 06
 
-tutorial.stage06p1=See how that works?  Feel free to delete "chicago" and try some other locations.
-tutorial.stage06p2=When you're done checking the weather, <strong>hit the escape key.</strong>
+tutorial.stage06p1=Entendeu como funciona? Sinta-se à vontade para apagar "aracaju" e tentar outras localidades.
+tutorial.stage06p2=Quando você estiver pronto para o próximo passo, <strong>pressione a tecla de escape (Esc).</strong>
 ##### Stage 07 (part 3 of 6) #####
 
-tutorial.stage07h1=Ubiquity Tutorial, part 3 of 6: Calculate command and Abbreviations
-tutorial.stage07p1=Summon Ubiquity again, and we'll learn some more commands.
+tutorial.stage07h1=Tutorial do Ubiquity, parte 3 de 6: Comando calcular e Abreviações
+tutorial.stage07p1=Abra o Ubiquity novamente para aprendermos novos comandos.
 ##### Stage 08
 
-tutorial.stage08p1=This time, <strong>type just the letter 'c'</strong> (lower-case) and see what happens.
+tutorial.stage08p1=Desta vez, <strong>digite somente a letra 'c'</strong> e veja o que acontece.
 ##### Stage 09
 
-tutorial.stage09p1=The Ubiquity <strong>suggestion list</strong> displays commands that start with the letter 'C'.
-tutorial.stage09p2=Let's say you want the <em>calculate</em> command.  You don't have to type the whole command name.  Just <strong>type the letters 'al'</strong> (so that your input says <strong>'cal'</strong>).
+tutorial.stage09p1=A <strong>lista de sugestões</strong> do Ubiquity exibe comandos que começam com a letra 'C'.
+tutorial.stage09p2=Digamos que você queira usar o comando <em>calcular</em>. Você não precisa digitar o nome inteiro do comando. Apenas <strong>digite as letras 'al'</strong> (assim, seu comando ficará <strong>'cal'</strong>).
 ##### Stage 10
 
-tutorial.stage10p1=Now <strong>type a space, and then type 22/7</strong> (so that your input says <strong>'cal 22/7'</strong>.)
+tutorial.stage10p1=Agora <strong>digite espaço e então digite 22/7</strong> (assim, seu comando ficará <strong>'cal 22/7'</strong>.)
 ##### Stage 11
 
-tutorial.stage11p1=The <em>calculate</em> command will show you the result of any arithmetic expression you type in.
-tutorial.stage11p2=When you're done experimenting with <em>calculate</em>, <strong>hit the escape key.</strong>
+tutorial.stage11p1=O comando <em>calcular</em> exibirá o resultado da expressão aritmética que você digitou.
+tutorial.stage11p2=Quando você estiver pronto para o próximo passo, <strong>pressione a tecla de escape (Esc).</strong>
 ##### Stage 12 (part 4 of 6) #####
 
-tutorial.stage12h1=Ubiquity Tutorial, part 4 of 6: Google command and the suggestion list
-tutorial.stage12p1=Summon Ubiquity again...
+tutorial.stage12h1=Tutorial do Ubiquity, parte 4 de 6: comando Google e a lista de sugestões
+tutorial.stage12p1=Abra o Ubiquity novamente…
 ##### Stage 13
 
-tutorial.stage13p1=Let's say you want to search Google for cheese.
-tutorial.stage13p2=Type the letter 'g', a space, and the word 'cheese'.
-tutorial.stage13p3=(Like, 'g cheese').
+tutorial.stage13p1=Digamos que você queira procurar pela palavra 'cheese' no Google.
+tutorial.stage13p2=Digite a letra 'g', um espaço e a palavra 'cheese'.
+tutorial.stage13p3=(como 'g cheese').
 ##### Stage 14
 
-tutorial.stage14p1=In the suggestion list, you can see several commands that start with 'g'.  You can use the up-arrow and down-arrow keys to move through the suggestion list.  Try it now:
-tutorial.stage14p2=<strong>tap the down-arrow key</strong> until the <em>google</em> command is hilighted.
+tutorial.stage14p1=Na lista de sugestões você verá vários comandos que começam com a letra 'g'. Você poderá usar as setas acima e abaixo para navegar pela lista de sugestões. Tente agora:
+tutorial.stage14p2=<strong>pressione a tecla seta para baixo</strong> até que o comando <em>google</em> seja focado.
 ##### Stage 15
 
-tutorial.stage15p1=The <em>Google</em> command preview shows a snippet from each search result matching your search term.
-tutorial.stage15p2=Those titles are links &#8212; you can click on one of them to open the page in a new tab.
-tutorial.stage15p3=When you're done, close that page and come back here, or just <strong>tap escape</strong> to move on with the tutorial.
+tutorial.stage15p1=O comando <em>Google</em> exibirá uma pequena amostra de cada resultado correspondente ao seu termo de pesquisa.
+tutorial.stage15p2=Esses títulos são links — você pode clicar em um deles para abrir a página em uma nova aba.
+tutorial.stage15p3=Quando você estiver pronto para o próximo passo, <strong>pressione a tecla de escape (Esc).</strong>
 ##### Stage 16 (part 5 of 6) #####
 
-tutorial.stage16ah1=Part 5 of 6: Selecting and Executing
-tutorial.stage16ap1=Say you're browsing the web and you come across an address &#8212; like the one in the box below &#8212; and you'd like to see it on a map.
-tutorial.stage16ap2=Ubiquity commands can work on your text selection.  Try it out: Use the mouse to <strong>select the address</strong> below. Then <strong>summon Ubiquity</strong>.
-tutorial.stage16bp1=Now <strong>type 'map'</strong>.
-tutorial.stage16cp1=The preview shows a Google Map of the address. You can click on this map to make it bigger; then you can scroll around on the map by dragging it.  Try that now.
-tutorial.stage16cp2=When you're done trying out the map, <strong>hit escape</strong>.
+tutorial.stage16ah1=Parte 5 de 6: Selecionando e Executando
+tutorial.stage16ap1=Digamos que você esteja navegando na web e chegou até um endereço — como o da caixa amarela abaixo — e deseja localizá-lo em um mapa.
+tutorial.stage16ap2=Comandos Ubiquity podem interagir com o texto selecionado em páginas da web. Experimente: use o mouse para <strong>selecionar o endereço</strong> abaixo. Em seguida, <strong>abra o Ubiquity</strong>.
+tutorial.stage16bp1=Agora <strong>digite 'mapa'</strong>.
+tutorial.stage16cp1=A visualização exibirá um mapa do Google do endereço. Você pode clicar nesse mapa para exibi-lo maior; então você poderá navegar pelo mapa arrastando-o com o cursor do mouse. Tente fazer isso agora.
+tutorial.stage16cp2=Quando você estiver pronto para o próximo passo, <strong>pressione a tecla de escape (Esc).</strong>
 ##### Stage 17
 
-tutorial.stage17p1=As another example, say you're browsing the web and you come across something written in a language you can't read &#8212; like the Japanese text below.  You can use Ubiquity to get a translation.
-tutorial.stage17p2=First <strong>select the Japanese text below</strong>, then bring up Ubiquity and <strong>use the <em>translate</em> command</strong>.
-tutorial.stage17p3=(type 'translate', or just 'tr').
+tutorial.stage17p1=Outro exemplo: digamos que você esteja navegando pela web e você encontra algo escrito em um idioma que você não domina — como o texto em japonês abaixo. Você pode usar o Ubiquity para obter uma tradução.
+tutorial.stage17p2=Primeiro <strong>selecione o texto em japonês abaixo</strong>, e então abra o Ubiquity e <strong>use o comando <em>traduzir</em></strong>.
+tutorial.stage17p3=(digite 'traduzir', ou somente 'tr').
 ##### Stage 18
 
-tutorial.stage18p1=At this point, you could type in some words that you want to have Ubiquity translate.  But as you can see in the preview area, Ubiquity is already translating the words that you have selected.
+tutorial.stage18p1=Nesse momento, você poderá digitar as palavras que você deseja que o Ubiquity traduza. Mas como você poderá ver na visualização, o Ubiquity já estará traduzindo as palavras que você selecionou.
 tutorial.stage18p2=Next, <strong>tap the enter key</strong> to execute the command.
 ##### Stage 19
 
@@ -95,20 +96,20 @@ tutorial.stage19p2=Each command does something different when you execute it.  M
 tutorial.stage19p3=Click here to continue
 ##### Stage 20
 
-tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word &#8212; like the one in the box below &#8212; and you'd like to look it up.
+tutorial.stage20p1=Let's do one more example.  Say you're browsing the web and you come across an unfamiliar word — like the one in the box below — and you'd like to look it up.
 tutorial.stage20p2=Select the word in the box below and then summon Ubiquity.
 ##### Stage 21
 
 tutorial.stage21p1=Now <strong>use the google command</strong> (type 'google' or just 'goo').
 ##### Stage 22
 
-tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done &#8212; you can dismiss Ubiquity and go on your way.
+tutorial.stage22p1=Now, if the preview of the <em>google</em> command tells you what you want to know, then you're done — you can dismiss Ubiquity and go on your way.
 tutorial.stage22p2=But if you want more information, you can tap the enter key to execute the <em>google</em> command, which will open the search results in a new page.
 tutorial.stage22p3=It's up to you.
 ##### Stage 23 (part 6 of 6) #####
 
 tutorial.stage23h1=Part 6 of 6: Getting Help and Learning More Commands
-tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity &#8212; plus you can find more on the Web.
+tutorial.stage23p1=So far you've learned the <em>weather</em>, <em>calculate</em>, <em>google</em>, <em>translate</em>, and <em>map</em> commands. That's a good start, but there are dozens more commands included with Ubiquity — plus you can find more on the Web.
 tutorial.stage23p2=How will you find out what commands are available?
 tutorial.stage23p3=One way is by using the <em>help</em> command.
 tutorial.stage23p4=Summon Ubiquity...
