--- a/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
+++ b/ubiquity/chrome/locale/pt-BR/coreubiquity.properties
@@ -8,14 +8,24 @@ ubiquity.cmdmanager.defaulthelp=Digite o nome de um comando e pressione enter pa
 
 #
 
+ubiquity.cmdutils.bookmarkletexec=Executa o bookmarklet <strong>%S</strong>.
 #
 
 #
 
+ubiquity.feedmanager.didyouknow=Você sabia que existe um comando Ubiquity para este site?
+ubiquity.feedmanager.showme=Mostre-me!
+ubiquity.feedmanager.dontremind=Não lembrar novamente sobre este site
+ubiquity.feedmanager.newcommandfound=Esta página contém comandos Ubiquity. Se você quiser adicioná-los, clique no botão à direita.
+ubiquity.feedmanager.subscribe=Increver-se…
 #
 
 #
 
+ubiquity.skinsvc.saveyourskin=Salvar seu tema
+ubiquity.skinsvc.installskin=Instalar…
+ubiquity.skinsvc.newskinfound=Esta página contém um tema do Ubiquity. Se você quiser instalar ese tema, clique no botão à direita.
+ubiquity.skinsvc.skinchanged=Seu tema foi alterado!
 #
 
 #
