--- a/ubiquity/chrome/locale/it-IT/aboutubiquity.dtd
+++ b/ubiquity/chrome/locale/it-IT/aboutubiquity.dtd
@@ -20,7 +20,7 @@
 <!ENTITY ubiquity.pagetip.HackUbiquity "È possibile accedere a questa pagina in ogni momento usando il comando “crea un comando per ubiquity”.">
 <!ENTITY ubiquity.generic.ImportTemplate "Importa da un modello">
 <!ENTITY ubiquity.generic.LaunchExternalEd "Avvia un editor esterno">
-<!ENTITY ubiquity.generic.EnableHighlighting "Evidenzia la sintassi">
+<!ENTITY ubiquity.generic.EnableHighlighting "Attiva la colorazione della sintassi">
 <!ENTITY ubiquity.generic.ButtonEdit "Modifica">
 <!ENTITY ubiquity.generic.ButtonSave "Salva">
 <!ENTITY ubiquity.generic.ButtonSaveAs "Salva con nome">
@@ -55,7 +55,7 @@
 <!ENTITY ubiquity.settings.NotificationWarning "Se si sta utilizzando Growl per Windows, assicurarsi che il servizio sia in esecuzione altrimenti non verrà mostrata alcuna notifica.">
 <!ENTITY ubiquity.settings.NotificationLinuxNote "Per poter  utilizzare <a href='&link.libNotify;'>le notifiche di libnotify</a> su Linux, è necessario installare libnotify-bin dal Gestore di pacchetti Synaptic  su Ubuntu, oppure eseguendo <code>sudo aptitude install libnotify-bin</code> o l'equivalente della propria distribuzione.">
 <!ENTITY ubiquity.settings.NotificationSettings "Impostazioni notifiche">
-<!ENTITY ubiquity.settings.NotificationParagraph1 "&appTitle; fa ampio uso di messaggi di notifica non modali e trasparenti. Su sistemi operativi OS X, per questo tipo di notifiche è possibile utilizzare Growl. Su Windows, è possibile utilizzare <a href='&link.snarl;'>Snarl</a, <a href='&link.growlWin;'>Growl per Windows</a>, &ldquo;toaster&rdquo; per far apparire questi messaggi di notifica nella nell'angolo in basso a destra dello schermo. Se sul proprio sistema è installato e in esecuzione <a href='&link.snarl;'>Snarl</a>, Ubiquity lo userà come sistema predefinito per i messaggi di notifica.">
+<!ENTITY ubiquity.settings.NotificationParagraph1 "&appTitle; fa ampio uso di messaggi di notifica non modali e trasparenti. Su sistemi operativi OS X, per questo tipo di notifiche è possibile utilizzare Growl. Su Windows, è possibile utilizzare <a href='&link.snarl;'>Snarl</a, <a href='&link.growlWin;'>Growl per Windows</a>, “toaster” per far apparire questi messaggi di notifica nell'angolo in basso a destra dello schermo. Se sul proprio sistema è installato e in esecuzione <a href='&link.snarl;'>Snarl</a>, Ubiquity lo userà come sistema predefinito per i messaggi di notifica.">
 <!ENTITY ubiquity.settings.NotificationEnable "attiva servizi di notifica">
 <!ENTITY ubiquity.settings.CustomSkin "Editor tema personalizzato">
 <!ENTITY ubiquity.settings.SaveSkin "Salva">
@@ -65,10 +65,10 @@
 <!ENTITY ubiquity.settings.Bug449Warning "Le modifiche effettuate ad un tema personalizzato verranno applicate solamente dopo aver riavviato Firefox. Questo è un <a href='&link.bug449;'>kbug noto</a>.">
 <!ENTITY ubiquity.commandlist.SubscriptionDetails "Ci sono &cmdCount; comandi in  &feedCount; feed. | Sono stati dismessi <a href='&chrome.graveyard;'>&unsubCount; feed</a>. | &helpLink;">
 <!ENTITY ubiquity.commandlist.CommandHelpParagraph1 "Tutti i comandi riconosciuti da &appTitle; sono visualizzati nella colonna di destra. In nero viene indicato il nome del comando (cioè quello che bisogna scrivere per richiamare il comando dalla riga di comando di Ubiquity). Il testo in grigio spiega brevemente cosa fa il comando.">
-<!ENTITY ubiquity.commandlist.CommandHelpParagraph2 "La colonna di sinistra mostra tutti i &ldquo;feeds&rdquo; sottoscritti in &amp;appTitle. Ciascun feed può contenere più comandi.">
-<!ENTITY ubiquity.commandlist.CommandHelpParagraph3 "È possibile visualizzare questa pagina ordinando per feed o per comandi. Per ordinare, fare clic sui collegamenti in  &ldquo;Ordina per&rdquo;.">
+<!ENTITY ubiquity.commandlist.CommandHelpParagraph2 "La colonna di sinistra mostra tutti i “feeds” sottoscritti in &amp;appTitle. Ciascun feed può contenere più comandi.">
+<!ENTITY ubiquity.commandlist.CommandHelpParagraph3 "È possibile visualizzare questa pagina ordinando per feed o per comandi. Per ordinare, fare clic sui collegamenti in  “Ordina per”.">
 <!ENTITY ubiquity.commandlist.CommandHelpParagraph4 "Se c'è un comando che non si vuole utilizzare, togliere il segno di spunta dalla casella posta a fianco del comando in questione, per riattivare il comando rimettere il segno di spunta.">
-<!ENTITY ubiquity.commandlist.CommandHelpParagraph5 "Se c'è un intero feed di comandi che non si desidera utilizzare, fare clic su &ldquo;[Dismetti]&rdquo; accanto al nome del feed. Tutti i comandi contenuti nel feed verranno disattivati e non potranno più essere utilizzati. Se in futuro si cambia idea, è possibile risottoscrivere il feed dismessi che sono mostrati a fondo pagina.">
+<!ENTITY ubiquity.commandlist.CommandHelpParagraph5 "Se c'è un intero feed di comandi che non si desidera utilizzare, fare clic su “[Dismetti]” accanto al nome del feed. Tutti i comandi contenuti nel feed verranno disattivati e non potranno più essere utilizzati. Se in futuro si cambia idea, è possibile risottoscrivere il feed dismessi che sono mostrati a fondo pagina.">
 <!ENTITY ubiquity.commandlist.SubscribedFeeds "Feed sottoscritti">
 <!ENTITY ubiquity.commandlist.AvailableCommands "Comandi">
 <!ENTITY ubiquity.commandlist.SortBy "Odrina per:">
@@ -77,7 +77,7 @@
 <!ENTITY ubiquity.commandlist.SortByEnabled "Attivato">
 <!ENTITY ubiquity.commandlist.SortByCommand "Nome comando">
 <!ENTITY ubiquity.commandlist.UnsubscribedFeeds "Feed dismessi">
-<!ENTITY ubiquity.commandlist.GraveYardText "In passato si era abbonati a questi feed, se si desidera riabbonarsi, fare clic su &ldquo;[risottoscrivi]&rdquo; accanto al nome del feed.">
+<!ENTITY ubiquity.commandlist.GraveYardText "In passato si era abbonati a questi feed, se si desidera riabbonarsi, fare clic su “[risottoscrivi]” accanto al nome del feed.">
 <!ENTITY ubiquity.support.GetHelp "Ottenere assistenza">
 <!ENTITY ubiquity.support.GetHelpParagraph1 "A causa della inusuale natura di &appTitle; come esperimento dei Mozilla Labs, è possibile riscontrare dei malfunzionamenti durante il suo utilizzo. Esistono diversi luoghi dove richiedere assistenza su &appTitle;.">
 <!ENTITY ubiquity.support.GetHelpParagraph2 "<a href='&link.supportGSFN;'>Get Satisfaction</a>  è una community dove è possibile ottenere assistenza. Molti problemi comuni con &appTitle; sono già stati affrontati e risolti. Se non si riesce a trovare una soluzione al proprio problema è possibile aprire una nuova discussione (in inglese).">
@@ -86,7 +86,7 @@
 <!ENTITY ubiquity.support.ReportBugs "Segnala un bug">
 <!ENTITY ubiquity.support.ReportBugsParagraph1 "Stiamo lavorando a un servizio automatizzato di segnalazione dei problemi, Ma, nel frattempo, sarà necessario segnalare manualmente i bug su GetSatisfaction o nella mailing list di Google Gruppi. Per favore, segnalare quanti più dettagli possibili per poter riprodurre il problema.">
 <!ENTITY ubiquity.support.ResetUbiquity "Ripristino di &appTitle; alle condizioni inizial:">
-<!ENTITY ubiquity.support.ResetUbiquityParagraph1 "Se &appTitle; dovesse diventare completamente ingovernabile, potrebbe essere necessario dover azzerare le impostazioni ripristinando la &ldquo;configurazione iniziale&rdquo; prima di poter usare nuovamente &appTitle;. Per azzerare &appTitle;, <a href='&chrome.reset;'>fare clic qui</a> &mdash; e, per favore, accetta le nostre scuse per il disagio arrecato.">
+<!ENTITY ubiquity.support.ResetUbiquityParagraph1 "Se &appTitle; dovesse diventare completamente ingovernabile, potrebbe essere necessario dover azzerare le impostazioni ripristinando la “configurazione iniziale” prima di poter usare nuovamente &appTitle;. Per azzerare &appTitle;, <a href='&chrome.reset;'>fare clic qui</a> — e, per favore, accetta le nostre scuse per il disagio arrecato.">
 <!ENTITY ubiquity.editor.CommandEditorHeader "Editor comandi di &appTitle;">
 <!ENTITY ubiquity.editor.CommandEditorNewCommands "<strong>Crea nuovi comandi</strong>inserendo il codice nell'area testuale qui sotto. Essi verranno salvati mentre si sta scrivendo e saranno immediatamente disponibili per essere utilizzati.">
 <!ENTITY ubiquity.editor.CommandEditorReadAuthTutorial "Per saperne di più, strong&gt;consultare il <a href='&link.cmdTutorial;'>tutorial sulla creazione di un comando</a></strong>. Per esempio di commandi built-in, <a href='&file.FeedsIndex;'>dare un'occhiata qui</a>.">
@@ -101,9 +101,9 @@
 <!ENTITY ubiquity.editor.ImportTemplate "Importa modello comando">
 <!ENTITY ubiquity.editor.LaunchExternalEd "Avvia un editor esterno">
 <!ENTITY ubiquity.editor.ShareCommand "Condividi">
-<!ENTITY ubiquity.editor.SaveToFile "Salva con cone">
+<!ENTITY ubiquity.editor.SaveToFile "Salva con nome">
 <!ENTITY ubiquity.editor.EnableHighlighting "Attiva colorazione della sintassi">
-<!ENTITY ubiquity.editor.ShareYourCommands "Condividere il comando">
+<!ENTITY ubiquity.editor.ShareYourCommands "Condividere i propri comandi">
 <!ENTITY ubiquity.editor.ShareCommandsParagraph1 "Segnalare il proprio comando nella pagina <a href='&link.wildCmds;'>commands in the wild</a> della wiki del progetto Ubiquity, in modo da farli conoscere anche ad altri utenti.">
 <!ENTITY ubiquity.editor.ShareCommandsParagraph2 "Inoltre, attivando il comando <a href='&link.herdDash;'>herd</a>, sarà possibile visualizzare i comandi in uso nella <a href='&link.herdMain;'>Herd dashboard</a>.">
 <!ENTITY ubiquity.editor.DevelopingUbiquity "Sviluppare &appTitle;">
@@ -118,16 +118,17 @@
 <!ENTITY ubiquity.confirmsubscription.WaitSourceLoading "Caricamento del sorgente, prego attendere...">
 <!ENTITY ubiquity.confirmsubscription.BodyDescPara1 "Se si è in grado di  comprendere il codice Javascript, utilizzare il proprio intuito per capire se il comando è sicuro e se vale la pena sottoscriverlo. Procedere a proprio rischio e pericolo.">
 <!ENTITY ubiquity.confirmsubscription.BodyDescPara2 "Se non si è in grado di comprendere il codice Javascript, sottoscrivere il comando solo se è stato consigliato da una persona che si conosce e di cui ci si fida.">
-<!ENTITY ubiquity.confirmsubscription.FingerPrintPlaceHolderText "In futuro, prevediamo di posizionare qui un widget che rappresenta ciò che noi chiamiamo  una &ldquo;rete sociale di fiducia&rdquo;. Sarà allora possibile vedere i comandi utilizzati dai propri amici e vedere se un comando è stato ritenuto sicuro o pericoloso da altri utenti. Questo verrà fatto con la speranza che possa aiutare a stabilire la sicurezza dei feed a cui si desidera  abbonarsi. Questa funzionalità dovrebbe apparire in una futura release di &appTitle;.">
+<!ENTITY ubiquity.confirmsubscription.FingerPrintPlaceHolderText "In futuro, prevediamo di posizionare qui un widget che rappresenta ciò che noi chiamiamo  una “rete sociale di fiducia”. Sarà allora possibile vedere i comandi utilizzati dai propri amici e vedere se un comando è stato ritenuto sicuro o pericoloso da altri utenti. Questo verrà fatto con la speranza che possa aiutare a stabilire la sicurezza dei feed a cui si desidera  abbonarsi. Questa funzionalità dovrebbe apparire in una futura release di &appTitle;.">
 <!ENTITY ubiquity.confirmsubscription.CheckAutoUpdateFeed "Aggiorna questo feed.">
 <!ENTITY ubiquity.confirmsubscription.ButtonTextDenyCommand "Voglio scappare da qui!">
 <!ENTITY ubiquity.confirmsubscription.ButtonTextAcceptCommand "Sono a conoscenza delle mie azioni. Sottoscrivi!">
 <!ENTITY ubiquity.confirmsubscription.AutoUpdateParagraph1 "Ciò significa che il feed verrà continuamente controllato per verificare la presenza di aggiornamenti che verranno automaticamente scaricati e utilizzati. Se si zeleziona questa preferenza, assicurarsi che i codice sul server sia modificato da persone di fiducia.">
 <!ENTITY ubiquity.confirmsubscription.AutoUpdateParagraph2 "Notare che questo feed non utilizza una connessione sicura e che ciò potrebbe causare un attacco di tipo <a href='&link.mitmInfo;'>man-in-the-middle attacks</a>. Per favore aggiornare questo feed solamente se si è coscienti di ciò che questo potrebbe implicare.">
 <!ENTITY ubiquity.confirmsubscription.SubConfirmationShortDesc "Da questo momento si è abbonati a questo feed di comandi e è possibile cominciare a utilizzare le funzionalità in esso contenute.">
-<!ENTITY ubiquity.confirmsubscription.SubConfirmationLongDesc "Se in futuro si volesse dismettere il feed, è sempre possibile utilizzare il comando  &ldquo;lista comandi&rdquo; per aprire <a href='&chrome.cmdlist;'>la pagina dei comandi</a>  e dismettere il feed o disattivare dei comandi specifici.">
+<!ENTITY ubiquity.confirmsubscription.SubConfirmationLongDesc "Se in futuro si volesse dismettere il feed, è sempre possibile utilizzare il comando  “lista comandi” per aprire <a href='&chrome.cmdlist;'>la pagina dei comandi</a>  e dismettere il feed o disattivare dei comandi specifici.">
 <!ENTITY ubiquity.confirmsubscription.SubConfirmationComplete "Ora è possibile chiudere questa finestra.">
 <!ENTITY ubiquity.reset.Header "Riportare &appTitle; alla sua configurazione iniziale?">
+<!ENTITY ubiquity.reset.Paragraph1 "Se &appTitle; cominciasse a non rispondere più ai comandi, potrebbe essere necessario riportarla alla sua “configurazione iniziale”. Per ripristinare la configurazione iniziale, fare clic sul pulsante qui sotto. Per completare l'operazione sarà inoltre necessario riavviare Firefox.">
 <!ENTITY ubiquity.reset.Paragraph2 "<strong>Attenzione:</strong> questa operazione cancellerà ogni personalizzazione effettuata a &appTitle; incluso (ma non solo):">
 <!ENTITY ubiquity.reset.Feeds "Feed sottoscritti">
 <!ENTITY ubiquity.reset.Skins "Temi personalizzati">
@@ -135,11 +136,17 @@
 <!ENTITY ubiquity.reset.NoReturn "<strong>Nota:</strong> una volta completata questa azione non sarà più possibile ritornare indietro.">
 <!ENTITY ubiquity.reset.ButtonExport "Exportare la configurazione corrente di &appTitle; in una nuova scheda">
 <!ENTITY ubiquity.reset.ButtonReset "Sono a conoscenza delle mie azioni. Azzerare &appTitle; e riavviare Firefox.">
+<!ENTITY ubiquity.localizecmd.ForTemplate "Questo è un modello per il file  <code>&feedKey;.po</code>">
+<!ENTITY ubiquity.localizecmd.HelpParagraph1 "Questo è un modello per la localizzazione dei comandi contenuti nel feed &feedKey; in formato gettext/portable object (*.po) format. Per maggiori informazioni, leggere <a href='&link.gettextInfo;'>la voce gettext su Wikipedia</a> in cui vengono presentati altri utili strumenti.">
 <!ENTITY ubiquity.localizecmd.HelpParagraph2 "Per testare la localizzazione, salvarlo come <code>&feedKey;.po</code> nella cartella &localeDir;.">
 <!ENTITY ubiquity.localizecmd.HelpParagraph3 "Assicurarsi che &ldquo;/XY/&rdquo; sia il codice corretto della propria lingua. Se la cartella non esiste sarà necessario crearla.">
 <!ENTITY ubiquity.bug19warning.Header "Un messaggio trasparente non può essere visualizzato.">
 <!ENTITY ubiquity.bug19warning.ShortDesc "Ubiquity ha provato a visualizzare un messaggio trasparente, ma l'operazione è fallita.">
+<!ENTITY ubiquity.bug19warning.LongDescParagraph1 "A causa di un <a href='&link.bug19;'>bug di &appTitle;</a> su sistemi OS X, è necessario, se non è presente, <a href='&link.growl;'>installare Growl</a> e riavviare Firefox.">
 <!ENTITY ubiquity.bug19warning.LongDescParagraph2 "Ci scusiamo per l'inconveniente.">
 <!ENTITY ubiquity.redirect.FeedHeader "Standard Feed Redirector">
 <!ENTITY ubiquity.redirect.FileHeader "Standard File Redirector">
+<!ENTITY ubiquity.redirect.FeedShortDesc "Questa pagina è un semplice strumento di redirezione che può servire per reindirizzare da un Ubiquity Chrome URI ad un normale feed URI.">
+<!ENTITY ubiquity.redirect.FeedLongDesc "Per utilizzare questo strumento, impostare l'hash del URI dove rimandare l'utente. Il  percorso deve essere un path relativo rispetto alla cartella  <tt>standard-feeds</tt> di Ubiquity. Per esempio:">
 <!ENTITY ubiquity.redirect.FileShortDesc "Questa pagina è un semplice strumento di reindirizzamento per rimandare l'utente da un  Ubiquity chrome: URI  a un file: URI.">
+<!ENTITY ubiquity.redirect.FileLongDesc "Per utilizzare questo strumento,  impostare l'hash del  URI  del percorso relativo del file dove si vuole rimandare l'utente. Il percorso deve essere relativo alla cartella di Ubiquity. Per esempio:">
