--- a/ubiquity/chrome/locale/ja/devubiquity.properties
+++ b/ubiquity/chrome/locale/ja/devubiquity.properties
@@ -1,2 +1,47 @@
 # This file is just a placeholder for localizations to dev tools
 
+ubiquity.quicklaunch.sorrymessage=申し訳ありませんが、この機能は OS X 以外では利用できません。
+ubiquity.quicklaunch.enabledefault=Desktop QuickLaunch を有効にする
+ubiquity.quicklaunch.enablerunning=Desktop QuickLaunch は有効です。
+ubiquity.quicklaunch.enableconfirm=Desktop QuickLaunch が有効になりました。
+ubiquity.quicklaunch.erorr=エ、エラーだと？！
+ubiquity.playpen.caller=caller:
+ubiquity.playpen.combo=combination:
+ubiquity.playpen.argstring=argString:
+ubiquity.playpen.score=score:
+ubiquity.playpen.multiplier=multiplier:
+ubiquity.playpen.noscore=スコアなし
+ubiquity.playpen.null=null
+ubiquity.playpen.done=完了
+ubiquity.playpen.duration=遅延時間:
+ubiquity.playpen.average=平均時間:
+ubiquity.playpen.step=ステップ
+ubiquity.playpen.winner=有力候補
+ubiquity.playpen.role=role:
+ubiquity.playpen.name=name:
+ubiquity.playpen.nountype=nountype:
+ubiquity.playpen.step1=ステップ 1: 単語を切り分ける
+ubiquity.playpen.step2=ステップ 2: 動詞を選出する
+ubiquity.playpen.step3=ステップ 3: 接語辞を選出する (TODO)
+ubiquity.playpen.step4=ステップ 4: 引数をグループ化する
+ubiquity.playpen.step5=ステップ 5: 代名詞を置き換える
+ubiquity.playpen.step6=ステップ 6: ノーマライズした引数を置き換える
+ubiquity.playpen.step7=ステップ 7: 動詞なしのパースについて、オブジェクトを他の role に割り当てる
+ubiquity.playpen.step8=ステップ 8: 動詞の候補
+ubiquity.playpen.step9=ステップ 9～11: パース完了
+ubiquity.playpen.parsespossible=パース候補
+ubiquity.playpen.parsedverbs=動詞ありのパース
+ubiquity.playpen.parsednouns=名詞候補付きのパースとスコア
+ubiquity.testsuite.testsingular=テスト
+ubiquity.testsuite.testplural=テスト
+ubiquity.testsuite.runerror=テスト実行中のエラー: %S
+ubiquity.tuner.ScoringGuess=In terms of a guess:
+ubiquity.tuner.Guess1=Questionable.
+ubiquity.tuner.Guess2=Possible.
+ubiquity.tuner.Guess3=Probable.
+ubiquity.tuner.Guess4=Perfect!
+ubiquity.tuner.ScoringMatch=In terms of a match:
+ubiquity.tuner.Match1=Poor.
+ubiquity.tuner.Match2=Okay.
+ubiquity.tuner.Match3=Good.
+ubiquity.tuner.Match4=Exact!
